--- a/react-ishop/package.json
+++ b/react-ishop/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ahooks": "^3.7.6",
     "axios": "^1.3.5",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.1",
