--- a/react-ishop/package.json
+++ b/react-ishop/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
+    "swiper": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
